# codesage

./: .gitignore  README.md  pyproject.toml  setup.cfg
codesage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
codesage/api/: main.py  routes.py  schemas.py
codesage/core/: config.py  logging.py
codesage/db/: init_db.py  models.py  session.py
codesage/embeddings/: base.py  hash_embedder.py  hf_embedder.py  registry.py  representation.py
codesage/ingestion/: file_walker.py  git_client.py  language.py
codesage/parsing/: base.py  python_ast.py  registry.py
codesage/pipeline/: delete_repo.py  embed_repo.py  ingest_parse.py
tests/: test_representation.py
